Fix invisible buttons styling

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2076,18 +2076,6 @@ a:hover {
 	margin-left: -1em;
 }
 
-@media (prefers-color-scheme: light) {
-	:root {
-		color: #213547;
-		background-color: #ffffff;
-	}
-	a:hover {
-		color: #747bff;
-	}
-	button {
-		background-color: #f9f9f9;
-	}
-}
 
 @media (max-width: 771px) {
 	.benefits-section {
@@ -2241,10 +2229,6 @@ a:hover {
 .buying-buttons button:hover,
 .selling-buttons button:hover {
 	background-color: #9b0014; /* A darker shade for hover */
-}
-
-body {
-	font-family: 'Open Sans', sans-serif; /* Example font */
 }
 .header-selected-item {
 	font-size: 2em;
